# DebateGuard

./: .dockerignore  .gitignore  ACCEPTANCE_TESTS.md  DOCS_MANIFEST.md  Dockerfile  HACKATHON_REQUIREMENTS.md  PROJECT_BRIEF.md  README.md  run.sh
.github/workflows/: ci.yml  deploy-template.yml
backend/: .env.example  Dockerfile  README.md  app.py  auth.py  config.py  db.py  fly.toml  gemini_live.py  main.py  pyproject.toml  requirements.txt  schema.py
backend/prompts/: factcheck_prompt.txt
backend/routes/: history.py  live_ws.py
backend/schemas/: events.py  factcheck.py  report.py
backend/services/: claim_detector.py  factcheck_service.py  firestore_store.py  live_session.py  report_generator.py  transcript_store.py
backend/tests/: test_claim_detector.py  test_event_schemas.py  test_factcheck_policy.py  test_firestore_store.py  test_health.py  test_history_route.py  test_live_ws.py  test_report_schema.py
backend/utils/: audio.py  logging.py
docs/: architecture-render.md  architecture.mmd  cloud-proof-checklist.md  demo-script.md  final-audit.md  implementation-plan.md  judging-checklist.md
docs/media/screenshots/: README.md
frontend/: .env.example  behaviour.json  index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/public/: pcm-processor.js
frontend/public/worklets/: pcm16-capture-processor.js
frontend/src/: App.tsx  index.css
frontend/tests/: analytics.test.ts
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: deploy.sh  local-dev.sh
(+17 files in other folders)
